--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,8 +4,8 @@ on:
   workflow_call:
   push:
     branches: ['main']
-  # pull_request:
-  #   branches: ['main']
+  pull_request:
+    branches: ['main']
 env:
   AWS_REGION: ap-northeast-1
   AWS_ACCOUNT: 898622234277
