--- a/package.json
+++ b/package.json
@@ -69,11 +69,14 @@
     "@next/third-parties": "^15.0.3",
     "inngest-cli": "^0.29.1",
     "luxon": "^3.5.0",
+    "mupdf": "^1.0.0",
     "next-runtime-env": "^3.2.0",
-    "react": "^18"
+    "react": "^18",
+    "zod": "3.24.1"
   },
   "overrides": {
-    "next": "14.2.6"
+    "next": "14.2.6",
+    "zod": "3.24.1"
   },
   "trigger.dev": {
     "endpointId": "documenso-app"
