add specific tag for alpine base image for reproducible build

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,7 +1,7 @@
 ###########################
 #     BASE CONTAINER      #
 ###########################
-FROM node:18-alpine AS base
+FROM node:18-alpine3.19 AS base
 
 ###########################
 #    BUILDER CONTAINER    #
