--- a/turbo.json
+++ b/turbo.json
@@ -128,6 +128,7 @@
     "NEXT_PRIVATE_TRIGGER_API_KEY",
     "NEXT_PRIVATE_TRIGGER_API_URL",
     "NEXT_PRIVATE_INNGEST_APP_ID",
+    "NEXT_PRIVATE_SUPPORT_EMAIL",
     "INNGEST_EVENT_KEY",
     "NEXT_PRIVATE_INNGEST_EVENT_KEY",
     "CI",
