--- a/turbo.json
+++ b/turbo.json
@@ -119,6 +119,7 @@
     "NEXT_PRIVATE_BROWSERLESS_URL",
     "NEXT_PRIVATE_JOBS_PROVIDER",
     "NEXT_PRIVATE_INNGEST_APP_ID",
+    "NEXT_PRIVATE_SUPPORT_EMAIL",
     "INNGEST_EVENT_KEY",
     "NEXT_PRIVATE_INNGEST_EVENT_KEY",
     "CI",
