--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
   "dependencies": {
     "@documenso/pdf-sign": "^0.1.0",
     "@documenso/prisma": "^0.0.0",
+    "typescript": "5.6.2",
     "@lingui/core": "^4.11.3",
     "@next/third-parties": "^15.0.3",
     "inngest-cli": "^0.29.1",
