--- a/.github/workflows/unified_build.yml
+++ b/.github/workflows/unified_build.yml
@@ -33,15 +33,23 @@ on:
   push:
     branches: ['main']
     paths:
-      - ".github/workflows/build_marketing.yml"
-      - "docker/Dockerfile.marketing"
-      - "apps/marketing/**"
+      - ".github/workflows/unified_build.yml"
+      - "docker/Dockerfile.*"
+      - "apps/**"
+      - "packages/*"
+      - "scripts/*"
+      - "package.json"
+      - "turbo.json"
   pull_request:
     branches: ['main']
     paths:
-      - ".github/workflows/build_marketing.yml"
-      - "docker/Dockerfile.marketing"
-      - "apps/marketing/**"
+      - ".github/workflows/unified_build.yml"
+      - "docker/Dockerfile.*"
+      - "apps/**"
+      - "packages/*"
+      - "scripts/*"
+      - "package.json"
+      - "turbo.json"
 env:
   AWS_REGION: ap-northeast-1
   AWS_ACCOUNT: 898622234277
@@ -183,5 +191,5 @@ jobs:
           github.event.inputs.ExecutionType == 'deploy' && github.event.inputs.environment == matrix.environment.name
         run: |
           aws ecs update-service \
-            --cluster $CLUSTER --service $SERVICE}${{ matrix.environment.name }} \
+            --cluster $CLUSTER --service ${SERVICE}${{ matrix.environment.name }} \
             --force-new-deployment
