--- a/.github/workflows/unified_build.yml
+++ b/.github/workflows/unified_build.yml
@@ -73,10 +73,10 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        environment:
-          - { name: "dev", docker_tag: "latest" }
-          - { name: "qa", docker_tag: "" }
-          - { name: "prod", docker_tag: "" }
+        function:
+          - build_web
+          - build_marketing
+          - build_documentation
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -97,16 +97,15 @@ jobs:
         uses: dorny/paths-filter@v3
         id: filter
         if: |
-          matrix.environment.name == 'dev' && github.event_name != 'workflow_dispatch' ||
-          (github.ref == 'refs/heads/main' && matrix.environment.name != 'dev')
+          github.event_name != 'workflow_dispatch' || github.ref == 'refs/heads/main'
         with:
           filters: |
             web:
-              - '.github/workflows/unified_build.yml'
+              # - '.github/workflows/unified_build.yml'
               - 'docker/Dockerfile'
               - 'apps/web/**'
             marketing:
-              - '.github/workflows/unified_build.yml'
+              # - '.github/workflows/unified_build.yml'
               - 'docker/Dockerfile.marketing'
               - 'apps/marketing/**'
             documentation:
@@ -114,56 +113,29 @@ jobs:
               - 'docker/Dockerfile.documentation'
               - 'apps/documentation/**'
 
-      - name: Build Signezily web
-        continue-on-error: true
+      - name: Build Signezily Web Docker Image
         if: |
           steps.filter.outputs.web == 'true' ||
           (github.event_name == 'workflow_dispatch' &&
-          github.event.inputs.environment == matrix.environment.name &&
+          matrix.function == 'build_web' &&
           (github.event.inputs.ExecutionType == 'build' || github.event.inputs.ExecutionType == 'build-push') &&
           github.event.inputs.site == 'web')
+        run: .github/workflows/build.sh ${{ matrix.function }}
         env:
-          BUILD_PLATFORM: 'amd64'
-        run: |
-          docker build \
-            -f ./docker/Dockerfile \
-            --progress=plain \
-            -t "898622234277.dkr.ecr.ap-northeast-1.amazonaws.com/signezily:latest" \
-            .
+          EVENT_NAME: ${{ github.event_name }}
+          GIT_BRANCH: ${{ github.ref_name }}
 
-      - name: Build Signezily Marketing
-        continue-on-error: true
-        if: |
-          steps.filter.outputs.marketing == 'true' ||
-          (github.event_name == 'workflow_dispatch' &&
-          github.event.inputs.environment == matrix.environment.name &&
-          (github.event.inputs.ExecutionType == 'build' || github.event.inputs.ExecutionType == 'build-push') &&
-          github.event.inputs.site == 'marketing')
-        env:
-          BUILD_PLATFORM: 'amd64'
-        run: |
-          docker build \
-            -f ./docker/Dockerfile.marketing \
-            --progress=plain \
-            -t "898622234277.dkr.ecr.ap-northeast-1.amazonaws.com/signezily:${{ matrix.environment.name }}-marketing" \
-            .
-
-      - name: Build Signezily Documentation
-        continue-on-error: true
+      - name: Build Signezily Documentation Docker Image
         if: |
           steps.filter.outputs.documentation == 'true' ||
           (github.event_name == 'workflow_dispatch' &&
-          github.event.inputs.environment == matrix.environment.name &&
+          matrix.function == 'build_documentation' &&
           (github.event.inputs.ExecutionType == 'build' || github.event.inputs.ExecutionType == 'build-push') &&
           github.event.inputs.site == 'documentation')
+        run: .github/workflows/build.sh ${{ matrix.function }}
         env:
-          BUILD_PLATFORM: 'amd64'
-        run: |
-          docker build \
-            -f ./docker/Dockerfile.documentation \
-            --progress=plain \
-            -t "898622234277.dkr.ecr.ap-northeast-1.amazonaws.com/signezily:documentation" \
-            .
+          EVENT_NAME: ${{ github.event_name }}
+          GIT_BRANCH: ${{ github.ref_name }}
 
       - name: Pushing Signezily web image
         continue-on-error: true
@@ -188,8 +160,8 @@ jobs:
 
       - name: Deploy
         if: github.ref == 'refs/heads/main' && github.event_name == 'push' || 
-          github.event.inputs.ExecutionType == 'deploy' && github.event.inputs.environment == matrix.environment.name
+          github.event.inputs.ExecutionType == 'deploy'
         run: |
           aws ecs update-service \
-            --cluster $CLUSTER --service ${SERVICE}${{ matrix.environment.name }} \
+            --cluster $CLUSTER --service ${SERVICE}${{ github.event.inputs.environment }} \
             --force-new-deployment
