--- a/.github/workflows/unified_build.yml
+++ b/.github/workflows/unified_build.yml
@@ -126,7 +126,7 @@ jobs:
 
       - name: Build Signezily Documentation Docker Image
         if: |
-          (github.event_name == 'workflow_dispatch' && matrix.function == 'build_web') ||
+          (github.event_name == 'workflow_dispatch' && matrix.function == 'build_documentation' && steps.filter.outputs.documentation == 'true') ||
           (github.event_name == 'workflow_dispatch' && matrix.function == 'build_documentation' &&
           (github.event.inputs.ExecutionType == 'build' || github.event.inputs.ExecutionType == 'build-push') &&
           github.event.inputs.site == 'documentation')
