--- a/.github/workflows/unified_build.yml
+++ b/.github/workflows/unified_build.yml
@@ -124,6 +124,12 @@ jobs:
           EVENT_NAME: ${{ github.event_name }}
           GIT_BRANCH: ${{ github.ref_name }}
 
+      - name: Build Signezily Documentation TEST
+        if: |
+          github.event_name == 'workflow_dispatch'
+        run: echo '${{ matrix.function }}'
+
+
       - name: Build Signezily Documentation Docker Image
         if: |
           (github.event_name == 'workflow_dispatch' && matrix.function == 'build_documentation' && steps.filter.outputs.documentation == 'true') ||
@@ -163,3 +169,20 @@ jobs:
           aws ecs update-service \
             --cluster $CLUSTER --service ${SERVICE}${{ github.event.inputs.environment }} \
             --force-new-deployment
+  test:
+    runs-on: ubuntu-latest-2core
+    steps:
+      - run: echo '${{ toJSON(needs.validation.outputs) }}'
+  
+      - name: Build
+        if: needs.validation.outputs.build == 'true' && github.event.pull_request.draft
+        run: echo '${{ needs.validation.outputs.build }}'
+      - name: cm-ui
+        if: needs.validation.outputs.cm-ui == 'true' && github.event.pull_request.draft
+        run: echo '${{ needs.validation.outputs.cm-ui }}'
+      - name: cube
+        if: needs.validation.outputs.cube == 'true' && github.event.pull_request.draft
+        run: echo '${{ needs.validation.outputs.cube }}'
+      - name: Draft PR
+        if: needs.validation.outputs.build == 'true' && github.event.pull_request.draft
+        run: echo '${{ ! github.event.pull_request.draft }}'
