skip marketing build

--- a/.github/workflows/unified_build.yml
+++ b/.github/workflows/unified_build.yml
@@ -75,7 +75,7 @@ jobs:
       matrix:
         function:
           - build_web
-          - build_marketing
+          # - build_marketing
           - build_documentation
     steps:
       - name: Checkout
@@ -128,17 +128,17 @@ jobs:
           EVENT_NAME: ${{ github.event_name }}
           GIT_BRANCH: ${{ github.ref_name }}
 
-      # - name: Build Signezily Marketing Docker Image
-      #   if: |
-      #     (github.ref == 'refs/heads/main' && github.event_name == 'push' && matrix.function == 'build_marketing' ) ||
-      #     (github.event_name == 'pull_request' && matrix.function == 'build_marketing' && steps.filter.outputs.marketing == 'true') ||
-      #     (github.event_name == 'workflow_dispatch' && matrix.function == 'build_marketing' &&
-      #     (github.event.inputs.ExecutionType == 'build' || github.event.inputs.ExecutionType == 'build-push') &&
-      #     github.event.inputs.site == 'marketing')
-      #   run: .github/workflows/build.sh ${{ matrix.function }}
-      #   env:
-      #     EVENT_NAME: ${{ github.event_name }}
-      #     GIT_BRANCH: ${{ github.ref_name }}
+      - name: Build Signezily Marketing Docker Image
+        if: |
+          (github.ref == 'refs/heads/main' && github.event_name == 'push' && matrix.function == 'build_marketing' ) ||
+          (github.event_name == 'pull_request' && matrix.function == 'build_marketing' && steps.filter.outputs.marketing == 'true') ||
+          (github.event_name == 'workflow_dispatch' && matrix.function == 'build_marketing' &&
+          (github.event.inputs.ExecutionType == 'build' || github.event.inputs.ExecutionType == 'build-push') &&
+          github.event.inputs.site == 'marketing')
+        run: .github/workflows/build.sh ${{ matrix.function }}
+        env:
+          EVENT_NAME: ${{ github.event_name }}
+          GIT_BRANCH: ${{ github.ref_name }}
 
       - name: Build Signezily Documentation Docker Image
         if: |
